# qwentts-cpp-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish-hf-wheels.yml  publish.yml  wheels.yml
patches/: qwentts-cpu-host-prompt-projection.patch  qwentts-reset-scheduler-before-talker-alloc.patch
samples/pr-wheel-audio/: README.md  manifest.json
scripts/: build_native.py  prepare_hf_wheel_repo.py  set_local_version.py  upload_hf_wheels.py
src/qwentts_cpp/: __init__.py  _binding.py  models.py
tests/: test_binding.py
